# nqueens-big

./: .gitignore  ArgParser.h  CMakeLists.txt  LICENSE  Log.cpp  Log.h  Perm.cpp  Perm.h  README.md  ThreadData.cpp  ThreadData.h  ZeroNode.cpp  ZeroNode.h  checksum.cpp  checksum.h  crc64.c  crc64.h  main.cpp  scores.cpp  scores.h
